--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,8 @@
     <!-- Contenido Principal -->
     <main class="main-content">
         <div class="brand">
-            <h1 class="brand-name">tide</h1>
-            <h1 class="brand-name">track.</h1>
+            <h1 class="brand-name" id="home-brand">tide</h1>
+            <h1 class="brand-name" id="home-brand">track.</h1>
         </div>
     </main>
 </body>
