Actualización de la navegación y estilos
- Agregado navigation.css con estilos para la barra de navegación
- Actualizados los enlaces de navegación en todas las páginas
- Ajustado el espaciado en about.css
- Eliminada animación del título en login
- Eliminado logo duplicado en login
- Mejorada la consistencia visual en todo el sitio

--- a/public/about.html
+++ b/public/about.html
@@ -4,43 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Tidetrack</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/navigation.css">
     <link rel="stylesheet" href="./css/about.css">
 </head>
 <body>
     <!-- Navegación -->
-    <nav class="navigation">
+    <nav class="nav-container">
         <div class="nav-links">
-            <a href="./index.html" class="nav-link">home</a>
+            <a href="./index.html" class="nav-link">home.</a>
             <a href="./about.html" class="nav-link active">about us</a>
             <a href="./login.html" class="nav-link">login</a>
-            <a href="./user.html" class="nav-link">user</a>
         </div>
     </nav>
 
     <!-- Contenido Principal -->
-    <main class="about-container">
+    <main class="about-sections">
         <!-- Fran -->
-        <section class="testimonial align-left">
-            <h2 class="nombre grande">fran</h2>
-            <div class="texto">
-                <p>Desarrollador full-stack con experiencia en JavaScript y React. Apasionado por la creación de interfaces de usuario intuitivas y la optimización del rendimiento de aplicaciones web.</p>
+        <section class="about-section" id="section-fran">
+            <div class="section-content">
+                <h2 class="about-title">fran.</h2>
+                <p class="about-description">
+                    tidetrack es tu herramienta para el completo control de tus finanzas personales. Sólo debés generar el hábito de ser quien dueño de tus finanzas.
+                    <br>
+                    Mediante la educación financiera y nuestro lifestyle, te prometemos tranquilidad financiera a la hora de tomar decisiones importantes.
+                </p>
             </div>
         </section>
 
         <!-- Eze -->
-        <section class="testimonial align-right">
-            <h2 class="nombre grande">eze</h2>
-            <div class="texto">
-                <p>Diseñador UX/UI con enfoque en la experiencia del usuario. Especializado en crear interfaces modernas y accesibles que facilitan la interacción con las aplicaciones web.</p>
+        <section class="about-section" id="section-eze">
+            <div class="section-content">
+                <p class="about-description">
+                    tidetrack empodera a los viajeros jóvenes para que disfruten plenamente de sus aventuras sin estrés financiero.
+                    <br>
+                    Combinamos herramientas completas de gestión financiera con un diseño relajado y amigable, ofreciendo una experiencia que hace del control de gastos algo tan natural y fluido como tus viajes.
+                </p>
+                <h2 class="about-title">eze.</h2>
             </div>
         </section>
 
         <!-- Dima -->
-        <section class="testimonial align-left">
-            <h2 class="nombre grande">dima</h2>
-            <div class="texto">
-                <p>Product Manager con habilidades en gestión de proyectos y análisis de datos. Se asegura de que el producto cumpla con las necesidades del usuario y cumpla los objetivos del negocio.</p>
+        <section class="about-section" id="section-dima">
+            <div class="section-content">
+                <h2 class="about-title">dima.</h2>
+                <p class="about-description">
+                    tidetrack es tu herramienta para el completo control de tus finanzas personales. Sólo debés generar el hábito de ser quien dueño de tus finanzas.
+                    Mediante la educación financiera y nuestro lifestyle, te prometemos tranquilidad financiera a la hora de tomar decisiones importantes.
+                </p>
             </div>
         </section>
     </main>
