--- a/public/index.html
+++ b/public/index.html
@@ -5,24 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tidetrack - Sistema de seguimiento financiero</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/navigation.css">
     <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
     <!-- Navegación -->
-    <nav class="navigation">
+    <nav class="nav-container">
         <div class="nav-links">
-            <a href="./index.html" class="nav-link active">home</a>
+            <a href="./index.html" class="nav-link active">home.</a>
             <a href="./about.html" class="nav-link">about us</a>
             <a href="./login.html" class="nav-link">login</a>
-            <a href="./user.html" class="nav-link">user</a>
         </div>
     </nav>
 
     <!-- Contenido Principal -->
     <main class="main-content">
         <div class="brand">
-            <h1 class="brand-name" id="home-brand">tide</h1>
-            <h1 class="brand-name" id="home-brand">track.</h1>
+            <h1 class="brand-name" id="home-brand">tide<br>track.</h1>
         </div>
     </main>
 </body>
