--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tidetrack - Sistema de seguimiento financiero</title>
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/navigation.css">
-    <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./navigation.css">
+    <link rel="stylesheet" href="./home.css">
 </head>
 <body>
     <!-- Navegación -->
