Reorganizar estructura de archivos: mover HTML a carpeta public y CSS a public/css/components

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tidetrack - Sistema de seguimiento financiero</title>
-    <link rel="stylesheet" href="./main.css">
-    <link rel="stylesheet" href="./navigation.css">
-    <link rel="stylesheet" href="./home.css">
+    <link rel="stylesheet" href="./css/components/main.css">
+    <link rel="stylesheet" href="./css/components/navigation.css">
+    <link rel="stylesheet" href="./css/components/home.css">
 </head>
 <body>
     <!-- Navegación -->
