--- a/public/about.html
+++ b/public/about.html
@@ -7,9 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./main.css">
-    <link rel="stylesheet" href="./navigation.css">
-    <link rel="stylesheet" href="./about.css">
+    <link rel="stylesheet" href="./css/components/main.css">
+    <link rel="stylesheet" href="./css/components/navigation.css">
+    <link rel="stylesheet" href="./css/components/about.css">
 </head>
 <body>
     <!-- Navegación -->
