--- a/public/login.html
+++ b/public/login.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Tidetrack</title>
-    <link rel="stylesheet" href="./main.css">
-    <link rel="stylesheet" href="./navigation.css">
-    <link rel="stylesheet" href="./login.css">
+    <link rel="stylesheet" href="./css/components/main.css">
+    <link rel="stylesheet" href="./css/components/navigation.css">
+    <link rel="stylesheet" href="./css/components/login.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;600;700&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <script src="./js/main.js" defer></script>
+    <script src="/js/main.js" defer></script>
 </head>
 <body>
     <!-- Navegación -->
